--- a/src/css/re-usable.scss
+++ b/src/css/re-usable.scss
@@ -1,35 +1,35 @@
-.pointer-events-none{
+.pointer-events-none {
   pointer-events: none;
 }
 
-.visibility-none{
+.visibility-none {
   visibility: hidden;
 }
 
-.section-title{
+.section-title {
   font-weight: 700;
   font-size: 64px;
   line-height: 141.9%;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
-.disable{
+.disable {
   pointer-events: none;
   opacity: 0.3;
 }
 
-.section-sub-title{
+.section-sub-title {
   font-weight: 500;
   font-size: 16px;
-  line-height: 200%;
+  line-height: 141.9%;
   text-align: center;
-  color: #FFFFFF;
-  max-width: 500px;
+  color: #70747c;
+  max-width: 700px;
 }
 
-.tiles{
-  .tile{
+.tiles {
+  .tile {
     img {
       margin: 25px 10px;
       border-radius: 10px;
@@ -68,8 +68,8 @@ ul.dropdown {
     display: block;
     padding: 7px 0;
     cursor: pointer;
-    a{
-      text-transform: none!important;
+    a {
+      text-transform: none !important;
     }
   }
 }
